# Reinforcement-Learning-from-Human-Feedback-Using-PPO

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: compare_ppo.py  ppo_demo.py  train_ppo.py
src/ppo_rlhf/: __init__.py  config.py  data.py  evaluate.py  model.py  reward.py  train.py  utils.py
